<resources>
    <string name="app_name">FamilyApp</string>
    <string name="title_home">Home</string>
    <string name="title_group">Group</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_glasses">Glasses</string>
    <string name="tille_mapinfo1">Glasses1Infomation</string>
    <string name="tille_mapinfo2">Glasses2Infomation</string>
</resources>
