<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.familyapp.view.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_group"
        android:name="com.example.familyapp.view.main.group.GroupFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_group" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.familyapp.view.main.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.familyapp.view.main.account.AccountFragment"
        android:label="AccountFragment"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_glasses"
        android:name="com.example.familyapp.view.main.glasses.GlassesFragment"
        android:label="GlassesFragment"
        tools:layout="@layout/fragment_glasses" />


</navigation>
